# my-ai-news

./: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  render.yaml
app/: config.py  daily_runner.py  email.py  example.env  pipeline.py  processor.py  runner.py
app/agents/: base_agent.py  curator_agent.py  digest_agent.py  email_agent.py  user_profile.py
app/database/: connection.py  create_tables.py  models.py  repository.py
app/profiles/: user_profile.py
app/scrapers/: anthropic.py  base_rss_scraper.py  openai.py  youtube.py
app/services/: anthropic_processor.py  curator_processor.py  digest_processor.py  email_processor.py  email_sender.py  processor_anthropic.py  processor_curator.py  processor_digest.py  processor_email.py  processor_youtube.py  youtube_processor.py  youtube_transcript.py
docker/: docker-compose.yml
migrations/: env.py
migrations/versions/: e052c4c332fb_add_emailed_at_to_digests.py
